--- a/.github/workflows/multi_stock_notify.yml
+++ b/.github/workflows/multi_stock_notify.yml
@@ -1,6 +1,8 @@
 name: Multi Stock Kakao Notify
 
 on:
+  push:
+    branches: [ "main" ]
   schedule:
     - cron: '0 0 * * 1-5' # 평일 매일 00:00 UTC
   workflow_dispatch:      # 수동 실행
